GiRaFFE: Rework how cplus and cminus are calculated to be more NRPyfied.

--- a/Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb
+++ b/Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb
@@ -247,14 +247,18 @@
     "  // Begin by computing u0\n",
     "  //output_stats stats; stats.failure_checker=0;\n",
     "  REAL u0_r,u0_l;\n",
-    "  pointwisecalc_u0(auxevol_gfs[IDX4pt(VALENCIAV_RU0,idx)],auxevol_gfs[IDX4pt(VALENCIAV_RU1,idx)],\n",
-    "                               auxevol_gfs[IDX4pt(VALENCIAV_RU2,idx)],auxevol_gfs[IDX4pt(U4UPPERZERO_R,idx)],\n",
-    "                               gamma_faceDD00,gamma_faceDD01,gamma_faceDD02,gamma_faceDD11,gamma_faceDD12,gamma_faceDD22,\n",
-    "                               alpha_face,idx)\n",
-    "  pointwisecalc_u0(auxevol_gfs[IDX4pt(VALENCIAV_LU0,idx)],auxevol_gfs[IDX4pt(VALENCIAV_LU1,idx)],\n",
-    "                               auxevol_gfs[IDX4pt(VALENCIAV_LU2,idx)],auxevol_gfs[IDX4pt(U4UPPERZERO_L,idx)],\n",
-    "                               gamma_faceDD00,gamma_faceDD01,gamma_faceDD02,gamma_faceDD11,gamma_faceDD12,gamma_faceDD22,\n",
-    "                               alpha_face,idx)\n",
+    "  pointwisecalc_u0(auxevol_gfs[IDX4pt(VALENCIAV_RU0GF,idx)],auxevol_gfs[IDX4pt(VALENCIAV_RU1GF,idx)],\n",
+    "                   auxevol_gfs[IDX4pt(VALENCIAV_RU2GF,idx)],auxevol_gfs[IDX4pt(U4UPPERZERO_RGF,idx)],\n",
+    "                   auxevol_gfs[IDX4pt(GAMMA_FACEDD00GF,idx)],auxevol_gfs[IDX4pt(GAMMA_FACEDD01GF,idx)],\n",
+    "                   auxevol_gfs[IDX4pt(GAMMA_FACEDD02GF,idx)],auxevol_gfs[IDX4pt(GAMMA_FACEDD11GF,idx)],\n",
+    "                   auxevol_gfs[IDX4pt(GAMMA_FACEDD12GF,idx)],auxevol_gfs[IDX4pt(GAMMA_FACEDD22GF,idx)],\n",
+    "                   auxevol_gfs[IDX4pt(ALPHA_FACEGF,idx)])\n",
+    "  pointwisecalc_u0(auxevol_gfs[IDX4pt(VALENCIAV_LU0GF,idx)],auxevol_gfs[IDX4pt(VALENCIAV_LU1GF,idx)],\n",
+    "                   auxevol_gfs[IDX4pt(VALENCIAV_LU2GF,idx)],auxevol_gfs[IDX4pt(U4UPPERZERO_LGF,idx)],\n",
+    "                   auxevol_gfs[IDX4pt(GAMMA_FACEDD00GF,idx)],auxevol_gfs[IDX4pt(GAMMA_FACEDD01GF,idx)],\n",
+    "                   auxevol_gfs[IDX4pt(GAMMA_FACEDD02GF,idx)],auxevol_gfs[IDX4pt(GAMMA_FACEDD11GF,idx)],\n",
+    "                   auxevol_gfs[IDX4pt(GAMMA_FACEDD12GF,idx)],auxevol_gfs[IDX4pt(GAMMA_FACEDD22GF,idx)],\n",
+    "                   auxevol_gfs[IDX4pt(ALPHA_FACEGF,idx)])\n",
     "\"\"\""
    ]
   },
@@ -266,9 +270,12 @@
    "source": [
     "# TODO: include our u0 calculator in a form that can operate on l/r faces\n",
     "Stilde_flux_string_pre = \"\"\"\n",
-    "static inline void pointwisecalc_u0(int &ValenciavU0,int &ValenciavU1, int &ValenciavU2, int &u0,\n",
-    "                                    const REAL gammaDD00,const REAL gammaDD01,const REAL gammaDD02,const REAL gammaDD11,const REAL gammaDD12,const REAL gammaDD22,\n",
-    "                                    const REAL alpha,const int idx) {\n",
+    "static inline void pointwisecalc_u0(int &ValenciavU0,int &ValenciavU1, \n",
+    "                                    int &ValenciavU2, int &u0,\n",
+    "                                    const REAL gammaDD00,const REAL gammaDD01,\n",
+    "                                    const REAL gammaDD02,const REAL gammaDD11,\n",
+    "                                    const REAL gammaDD12,const REAL gammaDD22,\n",
+    "                                    const REAL alpha) {\n",
     "    #include \"../computeu0_Cfunction.h\"\n",
     "}\n",
     "\n",
@@ -484,8 +491,9 @@
    "source": [
     "Stilde_flux_string_pre = \"\"\"\n",
     "static inline void find_cp_cm(REAL &cplus,REAL &cminus,const REAL v02,const REAL u0,\n",
-    "                              const REAL vi,const REAL lapse,const REAL shifti,\n",
-    "                              const REAL gammadet,const REAL gupii) {\n",
+    "                              const REAL vi,const REAL lapse,\n",
+    "                              const REAL shifti,const REAL gammadet,\n",
+    "                              const REAL gupii) {\n",
     "  const REAL u0_SQUARED=u0*u0;\n",
     "  const REAL ONE_OVER_LAPSE_SQUARED = 1.0/(lapse*lapse);\n",
     "  // sqrtgamma = psi6 -> psim4 = gammadet^(-1.0/3.0)\n",
@@ -525,17 +533,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Stilde_flux_string_pre += \"\"\"\n",
+    "Stilde_flux_string_cp_cm_x = \"\"\"\n",
     "  // v02 is the speed of light in FFE, which is 1.0 in G=c=1.0.\n",
     "  const REAL v02r=1.0,v02l=1.0;\n",
     "  \n",
-    "  int offset=flux_dirn; // In NRPy+, we rewrite this to work without an offset. \n",
-    "\n",
     "  REAL cplusr,cminusr,cplusl,cminusl;\n",
-    "  find_cp_cm(cplusr,cminusr,v02r,u0_r,\n",
-    "             auxevol_gfs[IDX4pt(VALENCIAV_RU0+offset,idx)],ONE_OVER_LAPSE_SQUARED,FACEVAL[SHIFTX+offset],psim4,FACEVAL[GUPXX+offset]);\n",
-    "  find_cp_cm(cplusl,cminusl,v02l,u0_l,\n",
-    "             auxevol_gfs[IDX4pt(VALENCIAV_LU0+offset,idx)],ONE_OVER_LAPSE_SQUARED,FACEVAL[SHIFTX+offset],psim4,FACEVAL[GUPXX+offset]);\n",
+    "  find_cp_cm(cplusr,cminusr,v02r,auxevol_gfs[IDX4pt(U4UPPERZERO_RGF,idx)],\n",
+    "             auxevol_gfs[IDX4pt(VALENCIAV_RU0GF,idx)],auxevol_gfs[IDX4pt(ALPHA_FACEGF)],\n",
+    "             auxevol_gfs[IDX4pt(BETA_FACEU0GF,idx)],auxevol_gfs[IDX4pt(GAMMADET_FACEGF,idx)],\n",
+    "             auxevol_gfs[IDX4pt(GAMMA_FACEDD00,idx)]);\n",
+    "  find_cp_cm(cplusl,cminusl,v02l,auxevol_gfs[IDX4pt(U4UPPERZERO_LGF,idx)],\n",
+    "             auxevol_gfs[IDX4pt(VALENCIAV_LU0GF,idx)],auxevol_gfs[IDX4pt(ALPHA_FACEGF)],\n",
+    "             auxevol_gfs[IDX4pt(BETA_FACEU0GF,idx)],auxevol_gfs[IDX4pt(GAMMADET_FACEGF,idx)],\n",
+    "             auxevol_gfs[IDX4pt(GAMMA_FACEDD00,idx)]);\n",
+    "\n",
+    "  // Then compute cmax, cmin. This is required for the HLL flux.\n",
+    "  const REAL cmaxL =  MAX(0.0,MAX(cplusl,cplusr));\n",
+    "  const REAL cminL = -MIN(0.0,MIN(cminusl,cminusr));\n",
+    "\"\"\"\n",
+    "\n",
+    "Stilde_flux_string_cp_cm_y = \"\"\"\n",
+    "  // v02 is the speed of light in FFE, which is 1.0 in G=c=1.0.\n",
+    "  const REAL v02r=1.0,v02l=1.0;\n",
+    "  \n",
+    "  REAL cplusr,cminusr,cplusl,cminusl;\n",
+    "  find_cp_cm(cplusr,cminusr,v02r,auxevol_gfs[IDX4pt(U4UPPERZERO_RGF,idx)],\n",
+    "             auxevol_gfs[IDX4pt(VALENCIAV_RU1GF,idx)],auxevol_gfs[IDX4pt(ALPHA_FACEGF)],\n",
+    "             auxevol_gfs[IDX4pt(BETA_FACEU1GF,idx)],auxevol_gfs[IDX4pt(GAMMADET_FACEGF,idx)],\n",
+    "             auxevol_gfs[IDX4pt(GAMMA_FACEDD11,idx)]);\n",
+    "  find_cp_cm(cplusl,cminusl,v02l,auxevol_gfs[IDX4pt(U4UPPERZERO_LGF,idx)],\n",
+    "             auxevol_gfs[IDX4pt(VALENCIAV_LU1GF,idx)],auxevol_gfs[IDX4pt(ALPHA_FACEGF)],\n",
+    "             auxevol_gfs[IDX4pt(BETA_FACEU1GF,idx)],auxevol_gfs[IDX4pt(GAMMADET_FACEGF,idx)],\n",
+    "             auxevol_gfs[IDX4pt(GAMMA_FACEDD11,idx)]);\n",
+    "\n",
+    "  // Then compute cmax, cmin. This is required for the HLL flux.\n",
+    "  const REAL cmaxL =  MAX(0.0,MAX(cplusl,cplusr));\n",
+    "  const REAL cminL = -MIN(0.0,MIN(cminusl,cminusr));\n",
+    "\"\"\"\n",
+    "\n",
+    "Stilde_flux_string_cp_cm_z = \"\"\"\n",
+    "  // v02 is the speed of light in FFE, which is 1.0 in G=c=1.0.\n",
+    "  const REAL v02r=1.0,v02l=1.0;\n",
+    "  \n",
+    "  REAL cplusr,cminusr,cplusl,cminusl;\n",
+    "  find_cp_cm(cplusr,cminusr,v02r,auxevol_gfs[IDX4pt(U4UPPERZERO_RGF,idx)],\n",
+    "             auxevol_gfs[IDX4pt(VALENCIAV_RU2GF,idx)],auxevol_gfs[IDX4pt(ALPHA_FACEGF)],\n",
+    "             auxevol_gfs[IDX4pt(BETA_FACEU2GF,idx)],auxevol_gfs[IDX4pt(GAMMADET_FACEGF,idx)],\n",
+    "             auxevol_gfs[IDX4pt(GAMMA_FACEDD22,idx)]);\n",
+    "  find_cp_cm(cplusl,cminusl,v02l,auxevol_gfs[IDX4pt(U4UPPERZERO_LGF,idx)],\n",
+    "             auxevol_gfs[IDX4pt(VALENCIAV_LU2GF,idx)],auxevol_gfs[IDX4pt(ALPHA_FACEGF)],\n",
+    "             auxevol_gfs[IDX4pt(BETA_FACEU2GF,idx)],auxevol_gfs[IDX4pt(GAMMADET_FACEGF,idx)],\n",
+    "             auxevol_gfs[IDX4pt(GAMMA_FACEDD22,idx)]);\n",
     "\n",
     "  // Then compute cmax, cmin. This is required for the HLL flux.\n",
     "  const REAL cmaxL =  MAX(0.0,MAX(cplusl,cplusr));\n",
@@ -648,7 +696,7 @@
     "### Step 1.f: Compute the fluxes \\[Back to [top](#toc)\\]\n",
     "$$\\label{fluxes}$$\n",
     "\n",
-    "Finally, we can compute the flux in each direction. This momentum flux in the $m$ direction is defined as $\\alpha \\sqrt{\\gamma} T^m_{\\ \\ j}$. We have already defined $\\alpha \\sqrt{\\gamma}$, so all we need to do is calculate $T^m_{\\ \\ j}$. We will do so in accordance with the method published by [Harten, Lax, and von Leer](https://epubs.siam.org/doi/pdf/10.1137/1025002) (hereafter HLLE) **(TODO: We actually use HLLE, need to update reference)** to solve the Riemann problem. So, we define $f(u) = T^m_{\\ \\ j}$ on each face as \n",
+    "Finally, we can compute the flux in each direction. This momentum flux in the $m$ direction is defined as $\\alpha \\sqrt{\\gamma} T^m_{\\ \\ j}$. We have already defined $\\alpha \\sqrt{\\gamma}$, so all we need to do is calculate $T^m_{\\ \\ j}$. We will do so in accordance with the method published by [Harten, Lax, and von Leer](https://epubs.siam.org/doi/pdf/10.1137/1025002)  and [Einfeldt](https://epubs.siam.org/doi/10.1137/0725021) (hereafter HLLE) to solve the Riemann problem. So, we define $f(u) = T^m_{\\ \\ j}$ on each face as \n",
     "$$\n",
     "f = \\alpha \\sqrt{\\gamma} \\left( (\\rho+b^2)(u^0 u^j) u_x + (P+\\frac{1}{2}b^2) \\delta_{jx} - b^j b_x \\right);\n",
     "$$\n",
