GiRaFFE/Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux: Comment-out file output (directory doesn't exist), and fix TeX output

--- a/Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb
+++ b/Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb
@@ -811,8 +811,10 @@
     "    Stilde_flux_kernel = fin.FD_outputC(\"returnstring\",Stilde_flux_to_print,params=\"outCverbose=False\")\n",
     "    out_string += Stilde_flux_kernel\n",
     "    out_string += Stilde_flux_string_post\n",
-    "    with open(os.path.join(outdir,\"GRFFE__S_\"+str(flux_dirn)+\"__flux.C\"), \"w\") as file:\n",
-    "        file.write(out_string)\n"
+    "    # Comment out for now: output directory doesn't exist.\n",
+    "    #     with open(os.path.join(outdir,\"GRFFE__S_\"+str(flux_dirn)+\"__flux.C\"), \"w\") as file:\n",
+    "    #         file.write(out_string)\n",
+    "\n"
    ]
   },
   {
@@ -926,7 +928,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb to latex\n",
-      "[NbConvertApp] Writing 83370 bytes to Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.tex\n",
+      "[NbConvertApp] Writing 86458 bytes to Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
@@ -941,9 +943,9 @@
    ],
    "source": [
     "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb\n",
-    "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_HO_Ccode_library-Stilde-flux.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_HO_Ccode_library-Stilde-flux.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_HO_Ccode_library-Stilde-flux.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.tex\n",
     "!rm -f Tut*.out Tut*.aux Tut*.log"
    ]
   }
