FishboneMoncriefID-ETK: Update thorn according to R. Haas' suggestions

--- a/Tutorial-ETK_thorn-FishboneMoncriefID.ipynb
+++ b/Tutorial-ETK_thorn-FishboneMoncriefID.ipynb
@@ -197,14 +197,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing FishboneMoncriefID/src/InitialData.c\n"
+      "Overwriting FishboneMoncriefID/src/InitialData.c\n"
      ]
     }
    ],
@@ -213,7 +213,7 @@
     "#include <math.h>\n",
     "#include <stdio.h>\n",
     "#include <stdbool.h>\n",
-    "#include <stdlib.h> // For drand48()\n",
+    "#include <stdlib.h> // Needed for rand()\n",
     "\n",
     "#include \"cctk.h\"\n",
     "#include \"cctk_Parameters.h\"\n",
@@ -254,8 +254,8 @@
     "  DECLARE_CCTK_ARGUMENTS;\n",
     "  DECLARE_CCTK_PARAMETERS;\n",
     "\n",
-    "  printf(\"Fishbone-Moncrief Disk Initial data.\\n\");\n",
-    "  printf(\"Using input parameters of\\n a = %e,\\n M = %e,\\nr_in = %e,\\nr_at_max_density = %e\\nkappa = %e\\ngamma = %e\\n\",a,M,r_in,r_at_max_density,kappa,gamma);\n",
+    "  CCTK_VINFO(\"Fishbone-Moncrief Disk Initial data.\");\n",
+    "  CCTK_VINFO(\"Using input parameters of\\n a = %e,\\n M = %e,\\nr_in = %e,\\nr_at_max_density = %e\\nkappa = %e\\ngamma = %e\",a,M,r_in,r_at_max_density,kappa,gamma);\n",
     "\n",
     "  // First compute maximum density\n",
     "  CCTK_REAL rho_max;\n",
@@ -324,19 +324,22 @@
     "      }\n",
     "\n",
     "  CCTK_INT final_idx = CCTK_GFINDEX3D(cctkGH,cctk_lsh[0]-1,cctk_lsh[1]-1,cctk_lsh[2]-1);\n",
-    "  printf(\"=====   OUTPUTS   =====\\n\");\n",
-    "  printf(\"betai: %e %e %e \\ngij: %e %e %e %e %e %e \\nKij: %e %e %e %e %e %e\\nalp: %e\\n\\n\",betax[final_idx],betay[final_idx],betaz[final_idx],gxx[final_idx],gxy[final_idx],gxz[final_idx],gyy[final_idx],gyz[final_idx],gzz[final_idx],kxx[final_idx],kxy[final_idx],kxz[final_idx],kyy[final_idx],kyz[final_idx],kzz[final_idx],alp[final_idx]);\n",
-    "  printf(\"rho: %.15e\\nPressure: %.15e\\nvx: %.15e\\nvy: %.15e\\nvz: %.15e\\n\",rho[final_idx],press[final_idx],velx[final_idx],vely[final_idx],velz[final_idx]);\n",
+    "  CCTK_VINFO(\"=====   OUTPUTS   =====\");\n",
+    "  CCTK_VINFO(\"betai: %e %e %e \\ngij: %e %e %e %e %e %e \\nKij: %e %e %e %e %e %e\\nalp: %e\\n\",betax[final_idx],betay[final_idx],betaz[final_idx],gxx[final_idx],gxy[final_idx],gxz[final_idx],gyy[final_idx],gyz[final_idx],gzz[final_idx],kxx[final_idx],kxy[final_idx],kxz[final_idx],kyy[final_idx],kyz[final_idx],kzz[final_idx],alp[final_idx]);\n",
+    "  CCTK_VINFO(\"rho: %.15e\\nPressure: %.15e\\nvx: %.15e\\nvy: %.15e\\nvz: %.15e\",rho[final_idx],press[final_idx],velx[final_idx],vely[final_idx],velz[final_idx]);\n",
     "}\n",
     "\n",
     "void FishboneMoncrief_ET_GRHD_initial__perturb_pressure(CCTK_ARGUMENTS) {\n",
     "  DECLARE_CCTK_ARGUMENTS;\n",
     "  DECLARE_CCTK_PARAMETERS;\n",
     "\n",
-    "#pragma omp parallel for\n",
     "  for(CCTK_INT k=0;k<cctk_lsh[2];k++) for(CCTK_INT j=0;j<cctk_lsh[1];j++) for(CCTK_INT i=0;i<cctk_lsh[0];i++) {\n",
     "        CCTK_INT idx = CCTK_GFINDEX3D(cctkGH,i,j,k);\n",
-    "        CCTK_REAL random_number_between_min_and_max = random_min + (random_max - random_min)*drand48();\n",
+    "        // Generate random number in range [0,1),\n",
+    "        // snippet courtesy http://daviddeley.com/random/crandom.htm\n",
+    "        CCTK_REAL random_number_between_0_and_1 = ( (double)rand() / ((double)(RAND_MAX)+(double)(1)) );\n",
+    "\n",
+    "        CCTK_REAL random_number_between_min_and_max = random_min + (random_max - random_min)*random_number_between_0_and_1;\n",
     "        press[idx] = press[idx]*(1.0 + random_number_between_min_and_max);\n",
     "        // Add 1e-300 to rho to avoid division by zero when density is zero.\n",
     "        eps[idx] = press[idx] / ((rho[idx] + 1e-300) * (gamma - 1.0));\n",
@@ -610,7 +613,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-ETK_thorn-FishboneMoncriefID.ipynb to latex\n",
-      "[NbConvertApp] Writing 60175 bytes to Tutorial-ETK_thorn-FishboneMoncriefID.tex\n",
+      "[NbConvertApp] Writing 60522 bytes to Tutorial-ETK_thorn-FishboneMoncriefID.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
