IllinoisGRMHD: fix all paths to be compatible with all systems. Still need to figure out a way to download files that is compatible with all systems.

--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.ipynb
@@ -82,16 +82,18 @@
     "# Step 0: Creation of the IllinoisGRMHD source directory\n",
     "# Step 0a: Add NRPy's directory to the path\n",
     "# https://stackoverflow.com/questions/16780014/import-file-from-parent-directory\n",
-    "import sys\n",
-    "sys.path.append(\"../../\")\n",
+    "import os,sys\n",
+    "nrpy_dir_path = os.path.join(\"..\",\"..\")\n",
+    "if nrpy_dir_path not in sys.path:\n",
+    "    sys.path.append(nrpy_dir_path)\n",
     "\n",
     "# Step 0b: Load up cmdline_helper and create the directory\n",
     "import cmdline_helper as cmd\n",
-    "IGM_src_dir_path = \"../src\"\n",
+    "IGM_src_dir_path = os.path.join(\"..\",\"src\")\n",
     "cmd.mkdir(IGM_src_dir_path)\n",
     "\n",
     "# Step 0c: Create the output file path \n",
-    "outfile_path__tau_and_prim_limits__C = IGM_src_dir_path+\"/apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.C\""
+    "outfile_path__tau_and_prim_limits__C = os.path.join(IGM_src_dir_path,\"apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.C\")"
    ]
   },
   {
@@ -788,11 +790,13 @@
     "Then we start evaluating the physical ADM inverse 4-metric, $g^{\\mu\\nu}$ (eq. 2.119 in [Numerical Relativity, by Baumgarte & Shapiro](https://books.google.com/books/about/Numerical_Relativity.html?id=dxU1OEinvRUC))\n",
     "\n",
     "$$\n",
+    "\\boxed{\n",
     "g^{\\mu\\nu} =\n",
     "\\begin{pmatrix}\n",
     "-\\alpha^{-2} & \\alpha^{-2}\\beta^{i}\\\\\n",
     "\\alpha^{-2}\\beta^{j} & \\gamma^{ij} - \\alpha^{-2}\\beta^{i}\\beta^{j}\n",
-    "\\end{pmatrix}\\ .\n",
+    "\\end{pmatrix}\n",
+    "}\\ .\n",
     "$$"
    ]
   },
@@ -1121,7 +1125,7 @@
     "\n",
     "original_IGM_file_url  = \"https://bitbucket.org/zach_etienne/wvuthorns/raw/ea4d70af29c988ce25fc5fdba5550e31e52f7df3/IllinoisGRMHD/src/apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.C\"\n",
     "original_IGM_file_name = \"apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs-original.C\"\n",
-    "original_IGM_file_path = IGM_src_dir_path+\"/\"+original_IGM_file_name\n",
+    "original_IGM_file_path = os.path.join(IGM_src_dir_path,original_IGM_file_name)\n",
     "urllib.urlretrieve(original_IGM_file_url,original_IGM_file_path)\n",
     "\n",
     "# Check if the downloaded file exists\n",
@@ -1162,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1170,7 +1174,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD__apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.ipynb to latex\n",
-      "[NbConvertApp] Writing 79436 bytes to Tutorial-IllinoisGRMHD__apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.tex\n",
+      "[NbConvertApp] Writing 80863 bytes to Tutorial-IllinoisGRMHD__apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
@@ -1184,12 +1188,20 @@
     }
    ],
    "source": [
-    "!jupyter nbconvert --to latex --template ../../latex_nrpy_style.tplx Tutorial-IllinoisGRMHD__apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.ipynb\n",
+    "latex_nrpy_style_path = os.path.join(nrpy_dir_path,\"latex_nrpy_style.tplx\")\n",
+    "!jupyter nbconvert --to latex --template $latex_nrpy_style_path Tutorial-IllinoisGRMHD__apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.ipynb\n",
     "!pdflatex -interaction=batchmode Tutorial-IllinoisGRMHD__apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.tex\n",
     "!pdflatex -interaction=batchmode Tutorial-IllinoisGRMHD__apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.tex\n",
     "!pdflatex -interaction=batchmode Tutorial-IllinoisGRMHD__apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.tex\n",
     "!rm -f Tut*.out Tut*.aux Tut*.log"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
