--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__the_conservative_to_primitive_algorithm.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__the_conservative_to_primitive_algorithm.ipynb
@@ -88,18 +88,20 @@
     "# Step 0: Creation of the IllinoisGRMHD source directory\n",
     "# Step 0a: Add NRPy's directory to the path\n",
     "# https://stackoverflow.com/questions/16780014/import-file-from-parent-directory\n",
-    "import sys\n",
-    "sys.path.join(\"../../\")\n",
+    "import os,sys\n",
+    "nrpy_dir_path = os.path.join(\"..\",\"..\")\n",
+    "if nrpy_dir_path not in sys.path:\n",
+    "    sys.path.append(nrpy_dir_path)\n",
     "\n",
     "# Step 0b: Load up cmdline_helper and create the directory\n",
     "import cmdline_helper as cmd\n",
-    "IGM_src_dir_path = \"../src\"\n",
+    "IGM_src_dir_path = os.path.join(\"..\",\"src\")\n",
     "cmd.mkdir(IGM_src_dir_path)\n",
     "\n",
     "# Step 0c: Create the output file path \n",
-    "outfile_path__driver_conserv_to_prims__C  = IGM_src_dir_path+\"/driver_conserv_to_prims.C\"\n",
-    "outfile_path__harm_primitives_lowlevel__C = IGM_src_dir_path+\"/harm_primitives_lowlevel.C\"\n",
-    "outfile_path__harm_primitives_headers__h  = IGM_src_dir_path+\"/harm_primitives_headers.h\""
+    "outfile_path__driver_conserv_to_prims__C  = os.path.join(IGM_src_dir_path,\"driver_conserv_to_prims.C\")\n",
+    "outfile_path__harm_primitives_lowlevel__C = os.path.join(IGM_src_dir_path,\"harm_primitives_lowlevel.C\")\n",
+    "outfile_path__harm_primitives_headers__h  = os.path.join(IGM_src_dir_path,\"harm_primitives_headers.h\")"
    ]
   },
   {
@@ -1117,9 +1119,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting ../src/harm_primitives_lowlevel.C\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile $outfile_path__harm_primitives_lowlevel__C\n",
     "inline int harm_primitives_gammalaw_lowlevel(const int index,const int i,const int j,const int k,CCTK_REAL *X,CCTK_REAL *Y,CCTK_REAL *Z,\n",
@@ -1163,11 +1173,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to ../src/harm_primitives_lowlevel.C\n"
+     ]
+    }
+   ],
    "source": [
-    "%%writefile - $outfile_path__harm_primitives_lowlevel__C\n",
+    "%%writefile -a $outfile_path__harm_primitives_lowlevel__C\n",
     "\n",
     "\n",
     "  // declare some variables for HARM.\n",
@@ -1242,11 +1260,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to ../src/harm_primitives_lowlevel.C\n"
+     ]
+    }
+   ],
    "source": [
-    "%%writefile - $outfile_path__harm_primitives_lowlevel__C\n",
+    "%%writefile -a $outfile_path__harm_primitives_lowlevel__C\n",
     "\n",
     "\n",
     "  // Note that ONE_OVER_SQRT_4PI gets us to the object\n",
@@ -1273,11 +1299,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to ../src/harm_primitives_lowlevel.C\n"
+     ]
+    }
+   ],
    "source": [
-    "%%writefile - $outfile_path__harm_primitives_lowlevel__C\n",
+    "%%writefile -a $outfile_path__harm_primitives_lowlevel__C\n",
     "\n",
     "\n",
     "  CCTK_REAL rho_b_oldL = PRIMS[RHOB];\n",
@@ -1301,11 +1335,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to ../src/harm_primitives_lowlevel.C\n"
+     ]
+    }
+   ],
    "source": [
-    "%%writefile - $outfile_path__harm_primitives_lowlevel__C\n",
+    "%%writefile -a $outfile_path__harm_primitives_lowlevel__C\n",
     "\n",
     "\n",
     "  /*\n",
@@ -1390,11 +1432,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to ../src/harm_primitives_lowlevel.C\n"
+     ]
+    }
+   ],
    "source": [
-    "%%writefile - $outfile_path__harm_primitives_lowlevel__C\n",
+    "%%writefile -a $outfile_path__harm_primitives_lowlevel__C\n",
     "\n",
     "\n",
     "  // Other ideas for setting the gamma speed limit\n",
@@ -1524,11 +1574,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to ../src/harm_primitives_lowlevel.C\n"
+     ]
+    }
+   ],
    "source": [
-    "%%writefile - $outfile_path__harm_primitives_lowlevel__C\n",
+    "%%writefile -a $outfile_path__harm_primitives_lowlevel__C\n",
     "\n",
     "\n",
     "    // Fill the array of conserved variables according to the wishes of Utoprim_2d.\n",
@@ -1570,11 +1628,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to ../src/harm_primitives_lowlevel.C\n"
+     ]
+    }
+   ],
    "source": [
-    "%%writefile - $outfile_path__harm_primitives_lowlevel__C\n",
+    "%%writefile -a $outfile_path__harm_primitives_lowlevel__C\n",
     "\n",
     "\n",
     "    CCTK_REAL uL = P_oldL/(gamma_th /* <- Should be local polytropic gamma factor */ - 1.0);\n",
@@ -1604,18 +1670,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting ../src/harm_primitives_lowlevel.C\n"
+      "Appending to ../src/harm_primitives_lowlevel.C\n"
      ]
     }
    ],
    "source": [
+    "%%writefile -a $outfile_path__harm_primitives_lowlevel__C\n",
+    "\n",
+    "\n",
     "    /*************************************************************/\n",
     "    // CALL HARM PRIMITIVES SOLVER:\n",
     "    check = Utoprim_2d(U, g4dn, g4up, detg, prim,stats.n_iter);\n",
@@ -1727,7 +1796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1885,7 +1954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1910,7 +1979,7 @@
     "\n",
     "original_IGM_file_url  = \"https://bitbucket.org/zach_etienne/wvuthorns/raw/2b402d7eaf8b177e5979cdfd3b73fd992dd2fa7e/IllinoisGRMHD/src/driver_conserv_to_prims.C\"\n",
     "original_IGM_file_name = \"driver_conserv_to_prims-original.C\"\n",
-    "original_IGM_file_path = IGM_src_dir_path+\"/\"+original_IGM_file_name\n",
+    "original_IGM_file_path = os.path.join(IGM_src_dir_path,original_IGM_file_name)\n",
     "urllib.urlretrieve(original_IGM_file_url,original_IGM_file_path)\n",
     "\n",
     "# Check if the downloaded file exists\n",
@@ -1950,7 +2019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2011,7 +2080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2073,7 +2142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -2081,7 +2150,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD__driver_conserv_to_prims.ipynb to latex\n",
-      "[NbConvertApp] Writing 93428 bytes to Tutorial-IllinoisGRMHD__driver_conserv_to_prims.tex\n",
+      "[NbConvertApp] Writing 96060 bytes to Tutorial-IllinoisGRMHD__driver_conserv_to_prims.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
@@ -2095,7 +2164,8 @@
     }
    ],
    "source": [
-    "!jupyter nbconvert --to latex --template ../../latex_nrpy_style.tplx Tutorial-IllinoisGRMHD__driver_conserv_to_prims.ipynb\n",
+    "latex_nrpy_style_path = os.path.join(nrpy_dir_path,\"latex_nrpy_style.tplx\")\n",
+    "!jupyter nbconvert --to latex --template $latex_nrpy_style_path Tutorial-IllinoisGRMHD__driver_conserv_to_prims.ipynb\n",
     "!pdflatex -interaction=batchmode Tutorial-IllinoisGRMHD__driver_conserv_to_prims.tex\n",
     "!pdflatex -interaction=batchmode Tutorial-IllinoisGRMHD__driver_conserv_to_prims.tex\n",
     "!pdflatex -interaction=batchmode Tutorial-IllinoisGRMHD__driver_conserv_to_prims.tex\n",
