--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__mhdflux.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__mhdflux.ipynb
@@ -74,16 +74,18 @@
     "# Step 0: Creation of the IllinoisGRMHD source directory\n",
     "# Step 0a: Add NRPy's directory to the path\n",
     "# https://stackoverflow.com/questions/16780014/import-file-from-parent-directory\n",
-    "import sys\n",
-    "sys.path.append(\"../../\")\n",
+    "import os,sys\n",
+    "nrpy_dir_path = os.path.join(\"..\",\"..\")\n",
+    "if nrpy_dir_path not in sys.path:\n",
+    "    sys.path.append(nrpy_dir_path)\n",
     "\n",
     "# Step 0b: Load up cmdline_helper and create the directory\n",
     "import cmdline_helper as cmd\n",
-    "IGM_src_dir_path = \"../src\"\n",
+    "IGM_src_dir_path = os.path.join(\"..\",\"src\")\n",
     "cmd.mkdir(IGM_src_dir_path)\n",
     "\n",
     "# Step 0c: Create the output file path \n",
-    "outfile_path__mhdflux__C = IGM_src_dir_path+\"/mhdflux.C\""
+    "outfile_path__mhdflux__C = os.path.join(IGM_src_dir_path,\"mhdflux.C\")"
    ]
   },
   {
@@ -818,7 +820,7 @@
     "\n",
     "original_IGM_file_url  = \"https://bitbucket.org/zach_etienne/wvuthorns/raw/ea4d70af29c988ce25fc5fdba5550e31e52f7df3/IllinoisGRMHD/src/mhdflux.C\"\n",
     "original_IGM_file_name = \"mhdflux-original.C\"\n",
-    "original_IGM_file_path = IGM_src_dir_path+\"/\"+original_IGM_file_name\n",
+    "original_IGM_file_path = os.path.join(IGM_src_dir_path,original_IGM_file_name)\n",
     "urllib.urlretrieve(original_IGM_file_url,original_IGM_file_path)\n",
     "\n",
     "# Check if the downloaded file exists\n",
@@ -867,7 +869,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD__mhdflux.ipynb to latex\n",
-      "[NbConvertApp] Writing 67622 bytes to Tutorial-IllinoisGRMHD__mhdflux.tex\n",
+      "[NbConvertApp] Writing 68135 bytes to Tutorial-IllinoisGRMHD__mhdflux.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
@@ -881,7 +883,8 @@
     }
    ],
    "source": [
-    "!jupyter nbconvert --to latex --template ../../latex_nrpy_style.tplx Tutorial-IllinoisGRMHD__mhdflux.ipynb\n",
+    "latex_nrpy_style_path = os.path.join(nrpy_dir_path,\"latex_nrpy_style.tplx\")\n",
+    "!jupyter nbconvert --to latex --template $latex_nrpy_style_path Tutorial-IllinoisGRMHD__mhdflux.ipynb\n",
     "!pdflatex -interaction=batchmode Tutorial-IllinoisGRMHD__mhdflux.tex\n",
     "!pdflatex -interaction=batchmode Tutorial-IllinoisGRMHD__mhdflux.tex\n",
     "!pdflatex -interaction=batchmode Tutorial-IllinoisGRMHD__mhdflux.tex\n",
